:bug: Fix header mobile open z-index and scroll

--- a/static/styles/main.styl
+++ b/static/styles/main.styl
@@ -21,6 +21,7 @@ body
 #header
 	max-height: 100vh
 	padding: 1.5rem 2rem 2rem
+	z-index: 99999
 
 	+mq($from: "small")
 		padding: 4.5rem 8rem 2rem
